# HAL_AUTO_CHECK

./: .buildinfo  README.md  genindex.html  hal_auto.html  halcion_auto_calulator.py  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  test-website.url
.github/workflows/: behave.yml  sphinx.yml
_sources/: hal_auto.md.txt
docs/source/: conf.py  index.md
features/: halcion_print.feature
features/steps/: step_definitions.py
hal_auto_check/: halcion_auto_calulator.py  post_install_script.py
